Remove subtitle and dashes from all pages

--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
     <div class="header">
         <div class="watermark">Projects</div>
         <h1>Project Tracking Board</h1>
-        <div class="subtitle">01. ——— Active Projects & Ventures</div>
     </div>
 
-    <div class="section-label">02. ——— Project Overview</div>
+    <div class="section-label">01. Project Overview</div>
     
     <div class="projects-grid">
         <div class="project-card">
