Swap SaaS for Relationships, add Weekly Review page

--- a/index.html
+++ b/index.html
@@ -148,9 +148,16 @@
         
         <div class="project-card">
             <div class="card-number">05</div>
-            <h2>SaaS Product Ideas</h2>
-            <p>Brainstorming and tracking potential software as a service product concepts.</p>
-            <a href="projects/saas-ideas.html">View Dashboard →</a>
+            <h2>Relationships</h2>
+            <p>Staying connected — family, friends, and dating. Tracking weekly social time and meaningful connections.</p>
+            <a href="projects/relationships.html">View Dashboard →</a>
+        </div>
+        
+        <div class="project-card">
+            <div class="card-number">06</div>
+            <h2>Weekly Review</h2>
+            <p>Week-over-week progress across all projects. Revenue, milestones, and key moves.</p>
+            <a href="projects/weekly-review.html">View Dashboard →</a>
         </div>
     </div>
 </body>
