Remove goal from template package dashboard, show current only

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             document.getElementById('idx-gd-rev').textContent = fmt(d.grottoDigital.monthlyRevenue) + '/mo';
             document.getElementById('idx-gs-rev').textContent = fmt(d.grottoSlice.monthlyRevenue) + '/mo';
             document.getElementById('idx-mb-rev').textContent = fmt(d.meetingBackgrounds.monthlyRevenue) + '/mo';
-            document.getElementById('idx-gtp-rev').textContent = fmt(d.grottoTemplatePackage.totalRevenue) + ' / ' + fmt(d.grottoTemplatePackage.revenueGoal) + ' goal';
+            document.getElementById('idx-gtp-rev').textContent = fmt(d.grottoTemplatePackage.totalRevenue) + ' total';
         });
     </script>
 </body>
