--- a/projects/template-package.html
+++ b/projects/template-package.html
@@ -20,10 +20,7 @@
         .metric h3 { font-family: 'Inter', sans-serif; font-size: 0.7rem; letter-spacing: 0.15em; text-transform: uppercase; color: #80756b; margin-bottom: 8px; font-weight: 500; }
         .metric p { font-family: 'DM Serif Display', serif; font-size: 2rem; color: #363633; }
         .metric .detail { font-family: 'Inter', sans-serif; font-size: 0.8rem; color: #80756b; margin-top: 4px; }
-        .progress-wrap { margin: 24px 0; }
-        .progress-bar { background: #e3decc; height: 8px; border-radius: 4px; overflow: hidden; }
-        .progress-fill { background: #363633; height: 100%; border-radius: 4px; transition: width 0.6s ease; }
-        .progress-label { display: flex; justify-content: space-between; font-size: 0.75rem; color: #80756b; margin-top: 8px; }
+        /* progress styles removed */
         h2 { font-family: 'DM Serif Display', serif; font-size: 1.4rem; font-weight: 400; margin-bottom: 16px; }
         ul { list-style: none; padding: 0; }
         ul li { padding: 12px 0; border-bottom: 1px solid #e3decc; font-size: 0.9rem; color: #80756b; }
@@ -50,18 +47,13 @@
             <p id="total-revenue">...</p>
         </div>
         <div class="metric">
-            <h3>Revenue Goal</h3>
-            <p id="revenue-goal">...</p>
-        </div>
-        <div class="metric">
             <h3>Stage</h3>
             <p id="stage">...</p>
         </div>
-    </div>
-
-    <div class="progress-wrap">
-        <div class="progress-bar"><div class="progress-fill" id="rev-fill" style="width:0%"></div></div>
-        <div class="progress-label"><span id="rev-pct">0%</span><span id="rev-target">$0 / $0</span></div>
+        <div class="metric">
+            <h3>Biggest Blocker</h3>
+            <p id="blocker-metric" style="font-size:1.2rem">...</p>
+        </div>
     </div>
 
     <div class="section-label">03. ——— Marketing Channels</div>
@@ -71,20 +63,15 @@
     <ul id="todo-list"><li>Loading...</li></ul>
 
     <div class="section-label">05. ——— Biggest Blocker</div>
-    <ul><li id="blocker">Loading...</li></ul>
+    <ul><li id="blocker-bottom">Loading...</li></ul>
 
     <script>
         const fmt = n => '$' + n.toLocaleString('en-US');
         fetch('../data/tracking.json').then(r=>r.json()).then(d=>{
             const g = d.grottoTemplatePackage;
             document.getElementById('total-revenue').textContent = fmt(g.totalRevenue);
-            document.getElementById('revenue-goal').textContent = fmt(g.revenueGoal);
             document.getElementById('stage').textContent = g.stage;
-            
-            const pct = Math.round((g.totalRevenue / g.revenueGoal) * 100);
-            document.getElementById('rev-fill').style.width = pct + '%';
-            document.getElementById('rev-pct').textContent = pct + '% of goal';
-            document.getElementById('rev-target').textContent = fmt(g.totalRevenue) + ' / ' + fmt(g.revenueGoal);
+            document.getElementById('blocker-metric').textContent = g.biggestBlocker;
 
             // Channels
             const ch = document.getElementById('channels');
@@ -101,7 +88,7 @@
             ul.innerHTML = (g.todoItems||[]).map(t => `<li>${t}</li>`).join('');
 
             // Blocker
-            document.getElementById('blocker').textContent = g.biggestBlocker;
+            document.getElementById('blocker-bottom').textContent = g.biggestBlocker;
         });
     </script>
 </body>
